# CMakeCrossPlatform_HelloWorld

HelloWorld/: CMakeLists.txt
HelloWorld/HelloWorld/: CMakeLists.txt
HelloWorld/Include/: helloworld.h
HelloWorld/Source/: CMakeLists.txt  helloworld.cpp
HelloWorld/VS2015OnWindows/: CMakeCache.txt
HelloWorldLib/: CMakeLists.txt
HelloWorldLib/HelloWorldLib-Dynamic/: CMakeLists.txt
HelloWorldLib/Include/: hellolib.h
HelloWorldLib/Source/: hellolib.cpp
HelloWorldUseBoth/: CMakeLists.txt
HelloWorldUseBoth/HelloWorldUseBoth-Dynamic/: CMakeLists.txt
HelloWorldUseBoth/Include/: hellousebothlib.h
HelloWorldUseBoth/Source/: hellousebothlib.cpp
HelloWorldUserLib/: CMakeLists.txt
HelloWorldUserLib/HelloWorldUserLib-Dynamic/: CMakeLists.txt
HelloWorldUserLib/Include/: hellouserlib.h
HelloWorldUserLib/Source/: hellouserlib.cpp
